GNOME Bugzilla – Bug 611591
gjs_invoke_c_function accesses out_arg_cvalues out of bounds
Last modified: 2010-03-02 22:20:59 UTC
Adding assertions suggests invoking test_int_out_utf8 causes out_arg_cvalues to not have been allocated at all.
Created attachment 155033 [details] [review] gi: assert we don't access argument arrays out of bounds
Created attachment 155038 [details] [review] gi: calculate out_arg_cvalues length correctly Make sure to allocate out_arg_cvalues also for functions with single out argument and no return value.
Review of attachment 155033 [details] [review]: Yes
Review of attachment 155038 [details] [review]: Sure