gi: calculate out_arg_cvalues length correctly

Make sure to allocate out_arg_cvalues also for functions with single out
argument and no return value.

https://bugzilla.gnome.org/show_bug.cgi?id=611591